Some python --> python3 package renames.
"python-gtk2" is missing, I do not know what package should
replace it.  We will see if something gets broken... ?

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -316,7 +316,7 @@ Depends: ${misc:Depends},
  puavo-vpn-client,
  python,
  python3-pampy,
- python-serial,
+ python3-serial,
  qiv,
  ruby-dnsruby,
  ruby-json,
@@ -350,9 +350,8 @@ Depends: ${misc:Depends},
  puavo-pkg,
  pv,
  python,
- python-dbus,
- python-gtk2,
- python-notify,
+ python3-dbus,
+ python3-notify2,
  rdiff,
  ruby-dbus,
  ruby-highline,
