--- a/debs/gnome-shell/debian/control
+++ b/debs/gnome-shell/debian/control
@@ -6,40 +6,51 @@ Source: gnome-shell
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
-Build-Depends: debhelper (>= 11.1.3),
+Uploaders: Iain Lane <laney@debian.org>, Laurent Bigonville <bigon@debian.org>
+Build-Depends: appstream,
+               asciidoc-base,
+               bash-completion,
+               dbus <!nocheck>,
+               debhelper-compat (= 13),
+               dh-sequence-gir,
+               dh-sequence-gnome,
+               gjs,
                gir1.2-accountsservice-1.0 <!nocheck>,
                gir1.2-gdm-1.0 (>= 3.18.2) <!nocheck>,
                gir1.2-geoclue-2.0 <!nocheck>,
+               gir1.2-gnomedesktop-3.0 (>= 3.35.90) <!nocheck>,
                gir1.2-gweather-3.0 (>= 3.25.91) <!nocheck>,
                gir1.2-rsvg-2.0 <!nocheck>,
+               gir1.2-upowerglib-1.0 <!nocheck>,
                gnome-control-center-dev (>= 1:3.4),
                gnome-pkg-tools (>= 0.11),
+               gnome-settings-daemon-common <!nocheck>,
                gobject-introspection (>= 1.49.1),
-               gsettings-desktop-schemas-dev (>= 3.27.90),
+               gsettings-desktop-schemas-dev (>= 3.33.1),
                gtk-doc-tools,
                libasound2-dev,
                libatk-bridge2.0-dev,
-               libcanberra-dev,
-               libcanberra-gtk3-dev,
-               libcroco3-dev (>= 0.6.8),
-               libecal1.2-dev (>= 3.7.90),
-               libedataserver1.2-dev (>= 3.17.2),
+               libecal2.0-dev (>= 3.33.1),
+               libedataserver1.2-dev (>= 3.33.1),
                libgcr-3-dev (>= 3.7.5),
                libgirepository1.0-dev (>= 1.29.15),
-               libgjs-dev (>= 1.50.2-3~),
+               libgjs-dev (>= 1.65.1),
                libgl1-mesa-dri <!nocheck>,
                libglib2.0-dev (>= 2.57.2),
+               libgnome-autoar-0-dev,
                libgnome-bluetooth-dev (>= 3.9.0) [linux-any],
-               libgnome-desktop-3-dev (>= 3.27.90),
+               libgnome-desktop-3-dev (>= 3.35.90),
                libgnome-menu-3-dev,
                libgstreamer1.0-dev (>= 0.11.92),
+               libgstreamer-plugins-base1.0-dev,
                libgtk-3-dev (>= 3.21.6),
-               libibus-1.0-dev,
-               libmutter-3-dev (>= 3.30.0),
+               libibus-1.0-dev (>= 1.5.22-2ubuntu2~),
+               libjson-glib-dev,
+               libmutter-7-dev (>= 3.38.0),
                libnm-dev (>= 1.10.4) [linux-any],
+               libpipewire-0.3-dev (>= 0.3.10) [linux-any],
                libpolkit-agent-1-dev (>= 0.100),
-               libpulse-dev (>= 2.0),
+               libpulse-dev (>= 13),
                libsecret-1-dev,
                libstartup-notification0-dev (>= 0.11),
                libsystemd-dev [linux-any],
@@ -47,22 +58,24 @@ Build-Depends: debhelper (>= 11.1.3),
                libxfixes-dev,
                libxml2-dev,
                mesa-common-dev,
-               meson (>= 0.47.0),
+               meson (>= 0.53.0),
                pkg-config (>= 0.22),
                sassc,
+               systemd [linux-any],
                xauth <!nocheck>,
-               xvfb <!nocheck>
+               xvfb <!nocheck>,
+               xwayland <!nocheck>
 Rules-Requires-Root: no
-Standards-Version: 4.3.0
+Standards-Version: 4.5.1
 Homepage: https://wiki.gnome.org/Projects/GnomeShell
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-shell.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-shell
 
 Package: gnome-shell
 Architecture: linux-any
-Depends: evolution-data-server (>= 3.17.2),
+Depends: evolution-data-server (>= 3.33.1),
          gir1.2-accountsservice-1.0,
-         gir1.2-atspi-2.0 (>= 2.9.91),
+         gir1.2-atspi-2.0 (>= 2.36),
          gir1.2-freedesktop,
          gir1.2-gcr-3 (>= 3.7.5),
          gir1.2-gdesktopenums-3.0 (>= 3.12),
@@ -70,11 +83,12 @@ Depends: evolution-data-server (>= 3.17.2),
          gir1.2-geoclue-2.0,
          gir1.2-glib-2.0 (>= 1.56.0),
          gir1.2-gnomebluetooth-1.0 (>= 3.12.0) [linux-any],
-         gir1.2-gnomedesktop-3.0 (>= 3.27.90),
+         gir1.2-gnomedesktop-3.0 (>= 3.35.90),
+         gir1.2-gstreamer-1.0,
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0 (>= 3.25.91),
-         gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-3 (>= 3.30.0),
+         gir1.2-ibus-1.0 (>= 1.5.22-2ubuntu2~),
+         gir1.2-mutter-7 (>= 3.38.0),
          gir1.2-nm-1.0 [linux-any],
          gir1.2-nma-1.0 [linux-any],
          gir1.2-pango-1.0,
@@ -82,13 +96,13 @@ Depends: evolution-data-server (>= 3.17.2),
          gir1.2-rsvg-2.0,
          gir1.2-soup-2.4 (>= 2.40.1),
          gir1.2-upowerglib-1.0 (>= 0.99),
-         gjs (>= 1.47.90),
+         gjs (>= 1.65.1),
          gnome-backgrounds (>= 3.13.90),
          gnome-settings-daemon (>= 3.16.0),
          gnome-shell-common (= ${source:Version}),
-         gsettings-desktop-schemas (>= 3.27.90),
+         gsettings-desktop-schemas (>= 3.33.1),
+         gstreamer1.0-pipewire (>= 0.3.10) [linux-any],
          libglib2.0-bin (>= 2.53.0),
-         mutter (>= 3.30.0),
          python3,
          ${gir:Depends},
          ${misc:Depends},
@@ -98,25 +112,25 @@ Recommends: bolt (>= 0.3),
             gdm3 (>= 3.10.0.1-3~),
             gkbd-capplet,
             gnome-control-center (>= 1:3.25.2),
+            gnome-menus,
             gnome-user-docs,
+            ibus,
             iio-sensor-proxy,
             switcheroo-control,
             unzip
 Suggests: gir1.2-telepathyglib-0.12,
           gir1.2-telepathylogger-0.2 (>= 0.8.0)
-Breaks: gdm3 (<< 3.19.92),
-        gnome-session (<< 3.19),
+Breaks: gnome-shell-extension-appindicator (<< 33),
         gnome-shell-extension-autohidetopbar (<< 20180511-2~),
         gnome-shell-extension-caffeine (<< 0~git20171229-3~),
-        gnome-shell-extension-dash-to-panel (<< 15-1.1~),
-        gnome-shell-extension-dashtodock (<< 64),
+        gnome-shell-extension-dash-to-panel (<= 18-1),
+        gnome-shell-extension-dashtodock (<< 67+git20200225-1),
         gnome-shell-extension-multi-monitors (<< 0.00~git20171014.1.df5d6e4-1.1~),
         gnome-shell-extension-pixelsaver (<< 1.10+git20161217-49f47bf-1.1~),
         gnome-shell-extension-taskbar (<< 57.0-2.1~),
         gnome-shell-extension-top-icons-plus (<< 21-4~),
         gnome-shell-extension-workspaces-to-dock (<< 45-1.1~),
         gnome-shell-pomodoro (<< 0.13.4-2.1~),
-Conflicts: gnome-screensaver (<< 3.6)
 Provides: notification-daemon,
           polkit-1-auth-agent
 Description: graphical shell for the GNOME desktop
@@ -130,7 +144,21 @@ Description: graphical shell for the GNOME desktop
 Package: gnome-shell-common
 Architecture: all
 Depends: ${misc:Depends}
-Breaks: gnome-calendar (<< 3.21.4),
-        gnome-tweak-tool (<< 3.21.91)
+Breaks: gnome-shell (<< 3.36.1-6~)
+Replaces: gnome-shell (<< 3.36.1-6~)
 Description: common files for the GNOME graphical shell
  This package contains translations and data files for the GNOME shell.
+
+Package: gnome-shell-extension-prefs
+Architecture: linux-any
+Depends: gnome-shell (= ${binary:Version}),
+         gnome-shell-common (= ${source:Version}),
+         ${gir:Depends},
+         ${misc:Depends},
+         ${shlibs:Depends}
+Recommends: chrome-gnome-shell
+Breaks: gnome-shell (<< 3.36.0-2)
+Replaces: gnome-shell (<< 3.36.0-2)
+Description: tool to enable / disable GNOME Shell extensions
+ This package contains a tool which users who use Shell extensions can use to
+ toggle them on and off, and access their preferences.
