--- a/debs/gnome-shell/debian/rules
+++ b/debs/gnome-shell/debian/rules
@@ -1,25 +1,22 @@
 #!/usr/bin/make -f
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs -Wl,--as-needed
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs
 
 %:
-	dh $@ --with gir,gnome
+	dh $@ --with bash_completion
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
 CONFFLAGS = \
-	-Denable-networkmanager=yes \
-	-Denable-systemd=yes
+	-Dnetworkmanager=true \
+	-Dsystemd=true
 endif
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libdir=/usr/lib \
-		--libexecdir=/usr/lib/gnome-shell \
+		-Dbash_completion=true \
 		$(CONFFLAGS)
-
-override_dh_missing:
-	dh_missing --fail-missing
 
 override_dh_makeshlibs:
 	dh_makeshlibs -X/usr/lib/gnome-shell/
@@ -28,8 +25,7 @@ override_dh_shlibdeps:
 	# gnome-shell uses mutters private mutter-clutter-1.0.so etc.
 	dh_shlibdeps -l"usr/lib/$(DEB_HOST_MULTIARCH)/mutter"
 
-override_dh_strip:
-	dh_strip --dbgsym-migration='gnome-shell-dbg (<< 3.20.2-2~)'
-
 override_dh_auto_test:
-	xvfb-run -a dh_auto_test
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	dbus-run-session xvfb-run -a dh_auto_test
+endif
