--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -128,6 +128,7 @@ Description: Puavo Core Infrastructure
 Package: puavo-desktop-applet
 Architecture: all
 Depends: ${misc:Depends},
+ gir1.2-ayatanaappindicator3-0.1,
  python3,
  python3-dbus,
  python3-gi
