Add a camera test to puavo-test-hardware.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -75,6 +75,7 @@ install : installdirs
 		puavo-pulseaudio-setup \
 		puavo-rest-request \
 		puavo-send-monitors-xml \
+		puavo-test-hardware \
 		puavo-tv-display
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
