An updated keyboard test for puavo-test-hardware.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -296,6 +296,7 @@ Depends: ${misc:Depends},
  gnome-session-flashback,
  imagemagick,
  jq,
+ kbd,
  krb5-user,
  libnss-extrausers,
  libnss-ldapd,
