Add dependencies needed by puavo-test-hardware.
Some day we should split the puavo-ltsp-* packages to something
more aptly named.

--- a/debs/puavo-os/debian/control
+++ b/debs/puavo-os/debian/control
@@ -287,11 +287,14 @@ Description: Puavo LTSP bootserver runs infrastructure services for thin/fat
 Package: puavo-ltsp-client
 Architecture: all
 Depends: ${misc:Depends},
+ alsa-utils,
  autofs,
  cowsay,
  cwm,
  daemon,
+ dialog,
  dnsutils,
+ evtest,
  gdm3,
  gnome-session-flashback,
  imagemagick,
@@ -305,8 +308,10 @@ Depends: ${misc:Depends},
  libpam-runtime,
  libsasl2-modules-gssapi-mit,
  libsasl2-modules-ldap,
+ mplayer,
  mutter,
  netcat-openbsd,
+ net-tools,
  nfs-common,
  nslcd,
  ntp,
@@ -330,6 +335,7 @@ Depends: ${misc:Depends},
  ruby,
  sntp,
  upower,
+ wireless-tools,
  xautolock,
  xserver-xorg-core
 Suggests: webkiosk-language-selector
