--- a/debs/openwsman/debian/rules
+++ b/debs/openwsman/debian/rules
@@ -18,6 +18,7 @@ override_dh_auto_configure:
 	  -DCMAKE_INSTALL_PREFIX=/usr \
 	  -DCMAKE_VERBOSE_MAKEFILE=TRUE \
 	  -DEXPLICIT_TARGET="$(EXPLICIT_TARGET)" \
+	  -DBUILD_RUBY=no \
 	  -DBUILD_RUBY_GEM=no \
 	  -DBUILD_PYTHON=no
 
