In cups-browsed.conf, use "LocalQueueNamingRemoteCUPS" with "RemoteName" and "AutoClustering" with "Yes" so we get printer names that correspond to their names on the remote server.

--- a/rules/desktop_cups/files/cups-browsed.conf
+++ b/rules/desktop_cups/files/cups-browsed.conf
@@ -384,7 +384,7 @@ BrowseRemoteProtocols dnssd cups
 
 # LocalQueueNamingRemoteCUPS DNS-SD
 # LocalQueueNamingRemoteCUPS MakeModel
-# LocalQueueNamingRemoteCUPS RemoteName
+LocalQueueNamingRemoteCUPS RemoteName
 # LocalQueueNamingIPPPrinter DNS-SD
 # LocalQueueNamingIPPPrinter MakeModel
 
@@ -535,7 +535,7 @@ BrowseRemoteProtocols dnssd cups
 # Only remote CUPS printers get clustered, not IPP network printers or
 # IPP-over-USB printers.
 
-# AutoClustering Yes
+AutoClustering Yes
 # AutoClustering No
 
 
