--- a/rules/nss/files/nsswitch.conf
+++ b/rules/nss/files/nsswitch.conf
@@ -2,7 +2,7 @@ passwd:         compat extrausers
 group:          compat extrausers
 shadow:         compat
 
-hosts:          files dns
+hosts:          files mdns4_minimal [NOTFOUND=return] dns myhostname
 networks:       files
 
 protocols:      db files
