Allow cups-browsed to find remote non-Cups-printers and set them up.

--- a/rules/desktop_cups/files/cups-browsed.conf
+++ b/rules/desktop_cups/files/cups-browsed.conf
@@ -478,7 +478,7 @@ LocalQueueNamingRemoteCUPS RemoteName
 # CreateIPPPrinterQueues AppleRaster
 # CreateIPPPrinterQueues Everywhere AppleRaster
 # CreateIPPPrinterQueues Driverless
-# CreateIPPPrinterQueues All
+CreateIPPPrinterQueues All
 
 
 # If cups-browsed is automatically creating print queues for native
