Remove the old "puavoadmins"-stuff.
The last time this was in use was on Ubuntu Trusty based bootservers.

--- a/parts/Makefile
+++ b/parts/Makefile
@@ -1,8 +1,7 @@
 # XXX does not compile on Bullseye:
 #   bigtouch-shutdown
 
-subdirs         := admins                     \
-                   autopilot                  \
+subdirs         := autopilot                  \
                    autopoweroff               \
                    blackboard                 \
                    client                     \
