We can build and install "pinta" on Bullseye.
The package is Debian appears to be permanently in "unstable".

--- a/debs/Makefile
+++ b/debs/Makefile
@@ -4,7 +4,7 @@ _pkgs_builddeps := sblim-sfcc openwsman
 # parts, ports and some cloud packages go into puavo-os images
 
 _pkgs_parts := puavo-ds puavo-os
-_pkgs_ports := gnome-shell wsmancli
+_pkgs_ports := gnome-shell pinta wsmancli
 
 # XXX disable most ports builds for Bullseye, these all most probably
 # XXX need some work
@@ -16,7 +16,6 @@ _pkgs_ports := gnome-shell wsmancli
 #                nbd                  \
 #                openboard            \
 #                openldap             \
-#                pinta                \
 #                vtun
 
 _pkgs_image     := $(_pkgs_builddeps) $(_pkgs_parts) $(_pkgs_ports)
