--- a/debs/Makefile
+++ b/debs/Makefile
@@ -4,14 +4,13 @@ _pkgs_builddeps := sblim-sfcc openwsman
 # parts, ports and some cloud packages go into puavo-os images
 
 _pkgs_parts := puavo-ds puavo-os
-_pkgs_ports := gnome-shell pinta wsmancli
+_pkgs_ports := gnome-shell libpam-ccreds pinta wsmancli
 
 # XXX disable most ports builds for Bullseye, these all most probably
 # XXX need some work
 # _pkgs_ports := gnome-control-center \
 #                grub2                \
 #                incron               \
-#                libpam-ccreds        \
 #                mutter               \
 #                nbd                  \
 #                openboard            \
